# Data-Science-Project

./: .gitignore  .ignore  README.md  TO DO.txt  build_notebook.py  crash_risk_model.html  crash_risk_model.ipynb  crash_risk_model.py  netlify.toml  pyproject.toml  render.yaml  requirements.txt
bloomberg/: BLOOMBERG_AND_YFINANCE_DATA_GUIDE.md  SYNTHETIC_CONTROVERSY_METHODOLOGY.md  ticker_universe.csv
crashrisk/: __init__.py  cli.py  config.py  demo.py  demo_data.py  pipeline.py  targets.py
crashrisk/analysis/: __init__.py  business.py  reporting.py
crashrisk/api/: __init__.py  main.py
crashrisk/data/: loaders.py  validators.py
crashrisk/features/: controversy.py  crash_metrics.py  downside.py  pipeline.py  returns.py  turnover.py
crashrisk/models/: __init__.py  compare.py  scenarios.py  score.py  splits.py  train.py
frontend/: app.js  index.html  styles.css
frontend/samples/: controversies.csv  price_history.csv  prices.csv
reports/: fds_project_report_draft.md  fds_project_report_final.docx  fds_project_report_final.md  fds_project_report_full.docx  fds_project_report_full.md  fds_project_report_with_figures.md  fds_viva_slides_outline.md  generate_report_charts.py
samples/: README.md  benchmark_prices.csv  fundamentals.csv  price_scenarios.csv  stock_scores.csv
scripts/: fetch_yfinance_data.py  generate_synthetic_controversies.py
tests/: conftest.py  test_api.py  test_business.py  test_compare.py  test_features.py  test_loaders.py  test_models.py  test_pipeline.py  test_reporting.py  test_scenarios.py  test_targets.py
