[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crashrisk-mvp"
version = "0.1.0"
description = "Lean ESG controversy crash-risk backend MVP"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "openpyxl",
  "scikit-learn",
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "yfinance",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
